# epi-flipboard

./: .env.dev  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  SPECIFICATIONS.md  cliff.toml  docker-compose.yml
.github/: copilot-instructions.md
.github/workflows/: release.yaml  tag.yaml  test.yaml
aggregator/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml
aggregator/sources/: united-kingdom.opml  united-states.opml
aggregator/src/epiflipboard_aggregator/components/: article_aggregator.py
aggregator/src/epiflipboard_aggregator/components/article_aggregator/: __init__.py  component.py  config.py  utils.py
aggregator/src/epiflipboard_aggregator/defs/article_aggregator/: defs.yaml
aggregator/src/epiflipboard_aggregator/resources/: __init__.py  postgresql.py  sentence_transformer.py
aggregator/tests/: test_definitions.py
aggregator/tests/components/: test_article_aggregator.py  test_config.py
aggregator/tests/resources/: test_postgresql.py  test_sentence_transformer.py
awesome-rss-feeds/countries/with_category/: India.opml
awesome-rss-feeds/countries/without_category/: Canada.opml  India.opml  Mexico.opml  Nigeria.opml  Philippines.opml  United Kingdom.opml  United States.opml
awesome-rss-feeds/recommended/with_category/: Android Development.opml  Android.opml  Apple.opml  Architecture.opml  Beauty.opml  Books.opml  Business & Economy.opml  Cars.opml  Cricket.opml  DIY.opml  Fashion.opml  Food.opml  Football.opml  Funny.opml  Gaming.opml  History.opml  Interior design.opml  Movies.opml  Music.opml  News.opml  Personal finance.opml  Photography.opml  Programming.opml  Science.opml  Space.opml  Sports.opml  Startups.opml  Tech.opml  Television.opml  Tennis.opml  Travel.opml  UI - UX.opml  Web Development.opml  iOS Development.opml
awesome-rss-feeds/recommended/without_category/: Android Development.opml  Android.opml  Apple.opml  Business & Economy.opml  Cricket.opml  DIY.opml  Football.opml  Interior design.opml  Personal finance.opml  Programming.opml  Science.opml  Tech.opml  UI - UX.opml  Web Development.opml  iOS Development.opml
docs/adrs/: 001-use-nextjs-for-webserver.md  002-use-python-and-dagster-for-aggregation.md  003-use-llm-and-qdrant-for-tagging-and-deduplication.md  004-use-opentelemetry-and-jaeger-for-tracing.md  005-use-postgresql-and-database-separation.md
entity/: Cargo.toml  article.rs  mod.rs  prelude.rs
entity/src/: article.rs  lib.rs  user.rs
migration/src/: lib.rs  m20251111_131154_create_table_articles.rs  m20251111_132044_seed_table_articles.rs  m20251201_135107_create_table_users.rs
server/: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
server/migration/: Cargo.toml  README.md
server/migration/src/: m20251111_131154_create_table_articles.rs  m20251111_132044_seed_table_articles.rs
server/src/: auth.rs  home.rs  main.rs  migrate.rs  serve.rs
server/static/css/: header.css  main.css  modal.css
server/static/js/: toast.js
server/templates/: header.html  home.html  signup.html  toast.html
src/: auth.rs  cli.rs  config.rs  error.rs  greg.rs  home.rs  main.rs  state.rs
static/css/: main.css  styles.css  toast.css
templates/: base.html  footer.html  header.html  home.html  login.html  signup.html  toast.html
webserver/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  eslint.config.mjs  instrumentation.node.ts  next.config.ts  package-lock.json  package.json  prisma.config.ts  vitest.config.ts
webserver/app/: actions.test.ts  actions.ts  dynamic-pages.test.tsx  feed-pages.test.tsx  globals.css  layout.test.tsx  layout.tsx  manifest.test.ts  manifest.ts  not-found.test.tsx  not-found.tsx  page.test.tsx  page.tsx  robots.test.ts  robots.ts  sitemap.test.ts  sitemap.ts  static-pages.test.tsx
webserver/app/about/: page.tsx
webserver/app/explore/: page.tsx
webserver/app/feeds/: page.tsx
webserver/app/history/: history-page.test.tsx  page.tsx
webserver/app/livez/: livez.test.ts  route.ts
webserver/components/: ArticleCard.test.tsx  ArticleCard.tsx  ArticleGrid.test.tsx  ArticleGrid.tsx  AuthGuard.test.tsx  AuthGuard.tsx  AuthModal.test.tsx  AuthModal.tsx  AuthProvider.test.tsx  AuthProvider.tsx  CookieConsent.test.tsx  CookieConsent.tsx  CreateFeedModal.test.tsx  CreateFeedModal.tsx  ExploreSearch.test.tsx  ExploreSearch.tsx  FeedUpdateItem.test.tsx  FeedUpdateItem.tsx  FeedsClientWrapper.test.tsx  FeedsClientWrapper.tsx  FollowButton.test.tsx  FollowButton.tsx  Footer.test.tsx  Footer.tsx  Header.test.tsx  Header.tsx  HomepageNav.test.tsx  HomepageNav.tsx  NavBar.test.tsx  NavBar.tsx  NavBarContainer.test.tsx  NavBarContainer.tsx  NavCard.test.tsx  NavCard.tsx
webserver/lib/: articles.test.ts  articles.ts  auth.test.ts  auth.ts  database-url.test.ts  database-url.ts  env-secrets.test.ts  env-secrets.ts  feed-activity.test.ts  feed-activity.ts  image-utils.test.ts  image-utils.ts  prisma.test.ts  prisma.ts  test-utils.tsx  utils.test.ts
webserver/prisma/: schema.prisma
webserver/scripts/: verify-feed-logic.ts  verify_feed_publishers.ts
webserver/types/: cache-life.d.ts  routes.d.ts  validator.ts
(+53 files in other folders)
