[project]
name = "epiflipboard_aggregator"
version = "0.1.0"
description = "EpiFlipBoard article aggregator"
authors = [
    { name = "Coding Kelps" }
]
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "dagster>=1.12.6",
    "dagster-docker>=0.28.6",
    "dagster-postgres>=0.28.6",
    "feedparser>=6.0.12",
    "lxml>=6.0.2",
    "psycopg[binary]>=3.3.2",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "dagster-dg-cli>=1.12.6",
    "dagster-webserver>=1.12.6",
    "ruff>=0.14.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "epiflipboard_aggregator"
registry_modules = [
    "epiflipboard_aggregator.components.*",
]
