[project]
name = "epiflipboard_aggregator"
version = "0.2.0"
description = "EpiFlipBoard article aggregator"
authors = [
    { name = "Coding Kelps" }
]
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "dagster>=1.12.8",
    "dagster-aws>=0.28.8",
    "dagster-docker>=0.28.8",
    "dagster-openai>=0.28.8",
    "dagster-postgres>=0.28.8",
    "dagster-qdrant>=0.0.3",
    "feedparser>=6.0.12",
    "lxml>=6.0.2",
    "pandas>=2.3.3",
    "psycopg[binary]>=3.3.2",
    "python-dateutil>=2.9.0.post0",
    "qdrant-client>=1.16.2",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.0",
    "torch>=2.9.1",
]

[dependency-groups]
dev = [
    "dagster-dg-cli>=1.12.8",
    "dagster-webserver>=1.12.8",
    "ruff>=0.14.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "epiflipboard_aggregator"
registry_modules = [
    "epiflipboard_aggregator.components.*",
]
