[package]
name = "epi-flipboard"
version = "0.1.0"
authors = ["Coding Kelps <contact@kelps.org>"]
autotests = true
categories = ["web-programming"]
description = "A FlipBoard clone."
edition = "2024"
homepage = "https://epi-flipboard.kelps.io/"
keywords = ["flipboard", "rss"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/coding-kelps/epi-flipboard"
rust-version = "1.92"

[workspace]
members = [".", "entity", "migration"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
migration = { path = "migration" }
entity = { path = "entity" }

askama = "0.14.0"
async-std = { version = "1", features = ["attributes", "tokio1"] }
axum = "0.8.6"
bcrypt = "0.16.0"
clap = "4.5.51"
chrono = "0.4.42"
displaydoc = "0.2.5"
nanohtml2text = "0.2.1"
opml = "1.1.6"
pretty-error-debug = "0.3.2"
pretty-error-debug-derive = "0.3.1"
reqwest = "0.12.24"
rss = "2.0.12"
sea-orm = { version = "1.1.16", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-uuid", "debug-print"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["full"] }
tower-cookies = "0.11.0"
